--- a/nerchuko.html
+++ b/nerchuko.html
@@ -46,7 +46,7 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to My Webpage</h1>
+        <h1>Welcome to Krishna's Webpage</h1>
         <p>This is a simple sample webpage using HTML and CSS</p>
     </header>
 
